clusters/homelab/infrastructure/networking/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: wildcard
      namespace: networking
      sectionName: https
  hostnames:
    - hubble.home.nomans.dev
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
